--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -85,6 +85,9 @@
       font-size: 5rem;
       margin: auto;
       text-decoration: none;
+      text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+      0px 8px 13px rgba(0,0,0,0.1),
+      0px 18px 23px rgba(0,0,0,0.1);
   }
 
   .button {
@@ -140,4 +143,11 @@
     }
 
   
-
+    @media only screen and (max-width: 600px){  
+      .title {
+        font-size: 3rem;
+        -webkit-column-count:1;
+        -moz-column-count:1;
+        column-count:1;
+      }
+  }
