--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -8,7 +8,7 @@ body{
   width: 100%;
   max-width: 120rem;
   margin: 10px auto;
-  padding: 0 0.5rem;
+  padding: 0;
 }
 
 .image-container {
@@ -26,3 +26,4 @@ body{
       column-count:1;
     }
 }
+
